# GAMMA

./: .cproject  .project  CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  GAMMA  GAMMA.cpp  GAMMA.cu  Makefile  cmake_install.cmake  toolpath2.crs
PowderBed/: Square.crs
Test_Runs/: run_gamma_cpp.sh
include/: BCManager.h  Bin.h  ConvManager.h  DomainManager.h  Element.h  FluxManager.h  HeatSolverManager.h  MaterialManager.h  Mesh.h  MovingFlxManager.h  Probe.h  RadManager.h  Surface.h  ThermalIsoManager.h  deviceHeader.h  dynaInput.h  helper_cuda.h  helper_string.h  vtuBinWriter.h  vtuWriter.h
src/: BCManager.cpp  Bin.cpp  ConvManager.cpp  DomainManager.cpp  Element.cpp  FluxManager.cpp  HeatSolverManager.cpp  MaterialManager.cpp  Mesh.cpp  MovingFlxManager.cpp  Probe.cpp  RadManager.cpp  Surface.cpp  ThermalIsoManager.cpp  deviceKernels.cu  dynaInput.cpp  vtuBinWriter.cpp  vtuWriter.cpp
